[project]
name = "asteroids"
version = "0.1.0"
description = "Guided project from the boot.dev."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.5.0",
    "pygame==2.6.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["F403", "F405", "F841"]

[tool.ruff.format]
quote-style = "double"
